--- a/style.css
+++ b/style.css
@@ -1,132 +1,127 @@
-/* Universal Styles */
-* {
-  box-sizing: border-box;
-  border: 3px solid red;
+html {
+    background-color: #457550;
 }
+
 body {
-  background-image: url("https://content.codecademy.com/courses/web-101/unit-6/htmlcss1-img_foodlogo.png");
-  text-align: center;
-  font-family: 'Roboto', sans-serif;
-  font-size: 18px;
+    font-family: 'Work Sans', sans-serif;
+    margin: 0 10%;
+    display: block;
 }
 
-a {
-  text-decoration: none;
+.bold.work-sans {
+    font-family: 'Work Sans', sans-serif;
+    display: block;
+    font-weight: bold;
 }
 
-/* Navigation */
-
-nav {
-  text-align: center;
+.dosis {
+  font-family: "Dosis", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
 }
 
-nav img {
-  display: block;
-  width: 180px;
-  margin: 0 auto;
+h1 {
+    display: block;
+    font-size: 2em;
+    margin-block-start: 0.67em;
+    margin-block-end: 0.67em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+    color: #92E8A5;
 }
 
-nav span {
-  display: block;
-  font-size: 16px;
-  font-weight: 100;
-  letter-spacing: 2px;
-  margin: 10px 0px;
+/* #a2a2a6 */
+.container {
+    border: 2px solid #fff;
+    background-color: #fff;
+    border-radius: 10px;
+    padding: 10px;
+    margin: 10px auto;
 }
 
-nav a {
-  color: #666666;
+h2 {
+    color: #92E8A5;
+    display: block;
+    font-size: 1.5em;
+    margin-block-start: 0.83em;
+    margin-block-end: 0.83em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
 }
 
-/* Content Container */
-
-.content {
-  width: 100%;
-  height: 500px;
-  margin: 10px auto;
-  overflow-y: auto;
+.colors-heading {
+    color: #F54305;
+}
+.color-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 20px 10px;
 }
 
-/* Content Header */
-
-.header {
-  background-image: url("https://content.codecademy.com/courses/web-101/unit-6/htmlcss1-img_burgerphoto.jpeg");
-  background-position: center;
-  background-size: cover;
-  height: 320px;
-  margin: 0 auto;
+.fonts {
+    background-color: #76AB9F;
+    border-color: #76AB9F;
 }
 
-.header h1 {
-  background-color: #05A8AA;
-  color: #FFF;
-  font-family: 'Oswald', sans-serif;
-  font-size: 40px;
-  font-weight: 300;
-  line-height: 40px;
-  width: 68%;
-
+.color-panel {
+    flex-grow: 1;
+    min-width: 100px;
+    border-radius: 10px;
+    text-align: center;
+    min-height: 90px;
+    font-weight: bold;
 }
 
-/* Content Body */
+/*
+.color-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+    gap: 1em;
+}
+*/
 
-.content .body {
-  width: 90%;
-  margin: 0 auto;
+.gir-green {
+    background-color: #92E8A5;
 }
 
-.body p {
-  color: #333333;
-  font-weight: 100;
-  line-height: 34px;
-  width: 90%;
-  margin-top: 18px;
+.burnt-creamsicle {
+    background-color: #F59725;
 }
 
-/* Content Button */
-
-.button {
-  border-radius: 4px;
-  color: #05A8AA;
-  display: block;
-  font-weight: 700;
-  width: 200px;
-  padding: 20px;
-  margin: 40px auto;
-  border: 1px solid blue;
+.retro-future {
+    background-color: #16F5C5;
 }
 
-.button:hover {
-  background-color: #05A8AA;
-  border: 1px solid #05A8AA;
-  color: #FFF;
+.charmeleon {
+    background-color: #F54305;
 }
 
-/* Content Nutrition */
-
-ul.nutrition {
-  padding: 20px;
+.blue-gray-moss {
+    background-color: #76AB9F;
 }
 
-ul.nutrition li {
-  display: inline-block;
-  background-color: #05A8AA;
-  list-style: none;
-  width: 200px;
-  padding: 10px 20px;
-  margin-bottom: 3px;
+.evergreen {
+    background-color: #457550;
 }
 
-.nutrition .category {
-  color: white;
-  font-weight: 100;
-  letter-spacing: 2px;
-  display: block;
+.white {
+    color: #fff;
 }
 
-.nutrition .value {
-  color: white;
-  font-size: 26px;
-  font-weight: 700;
-  letter-spacing: 2px;
+/* display: inline-block;
+flex-grow: 1;
+    flex-basis: 200;
+    width: 100%;
+    */
+
+div {
+    display: block;
+}
+
+.color-label {
+    padding: 5px;
 }
